--- a/src/GuiApp/Avalonia/FileTime.GuiApp.App/Views/PathPresenter.axaml
+++ b/src/GuiApp/Avalonia/FileTime.GuiApp.App/Views/PathPresenter.axaml
@@ -1,13 +1,13 @@
 <UserControl
+    d:DesignHeight="450"
+    d:DesignWidth="800"
+    mc:Ignorable="d"
     x:Class="FileTime.GuiApp.App.Views.PathPresenter"
     xmlns="https://github.com/avaloniaui"
-    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:coremodels="using:FileTime.Core.Models"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-    d:DesignHeight="450"
-    d:DesignWidth="800"
-    mc:Ignorable="d">
+    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml">
     <ItemsControl ItemsSource="{Binding Converter={StaticResource SplitStringConverter}, ConverterParameter={x:Static coremodels:Constants.SeparatorChar}}">
         <ItemsControl.ItemsPanel>
             <ItemsPanelTemplate>
@@ -17,10 +17,13 @@
         <ItemsControl.ItemTemplate>
             <DataTemplate>
                 <StackPanel Orientation="Horizontal">
-                    <TextBlock Text="{Binding}" />
                     <TextBlock
-                        Margin="5,0,5,0"
+                        Classes="PathPresenterItem"
+                        PointerPressed="InputElement_OnPointerPressed"
+                        Text="{Binding}" />
+                    <TextBlock
                         Foreground="{DynamicResource LightForegroundBrush}"
+                        Margin="5,0,5,0"
                         Text="/" />
                 </StackPanel>
             </DataTemplate>
