Move common things to AppCore from GuiApp 2

--- a/src/GuiApp/Avalonia/FileTime.GuiApp.App/Views/MainWindow.axaml
+++ b/src/GuiApp/Avalonia/FileTime.GuiApp.App/Views/MainWindow.axaml
@@ -323,7 +323,7 @@
                             </ia:DataTriggerBehavior>
                         </i:Interaction.Behaviors>
                         <ItemsControl
-                            ItemsSource="{Binding AppState.TimelineViewModel.ParallelCommandsGroups.Collection}"
+                            ItemsSource="{Binding TimelineViewModel.ParallelCommandsGroups.Collection}"
                             VerticalAlignment="Stretch"
                             x:Name="CommandGroups">
                             <ItemsControl.ItemsPanel>
