Gui loading background

--- a/src/GuiApp/Avalonia/FileTime.GuiApp.App/Resources/Brushes.axaml
+++ b/src/GuiApp/Avalonia/FileTime.GuiApp.App/Resources/Brushes.axaml
@@ -1,5 +1,4 @@
-<ResourceDictionary xmlns="https://github.com/avaloniaui"
-                    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml">
+<ResourceDictionary xmlns="https://github.com/avaloniaui" xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml">
     <LinearGradientBrush x:Key="ContentSeparatorBrush">
         <GradientStop Color="#0093a1a1" Offset="0" />
         <GradientStop Color="#93a1a1" Offset="0.5" />
@@ -15,36 +14,29 @@
 
 
     <SolidColorBrush Color="{DynamicResource AppBackgroundColor}" x:Key="AppBackgroundBrush" />
+    <SolidColorBrush Color="{DynamicResource AppLoadingBackgroundColor}" x:Key="AppLoadingBackgroundBrush" />
     <SolidColorBrush Color="{DynamicResource ContainerBackgroundColor}" x:Key="ContainerBackgroundBrush" />
-    <SolidColorBrush Color="{DynamicResource TransparentContainerBackgroundColor}"
-                     x:Key="TransparentContainerBackgroundBrush" />
+    <SolidColorBrush Color="{DynamicResource TransparentContainerBackgroundColor}" x:Key="TransparentContainerBackgroundBrush" />
 
     <SolidColorBrush Color="{DynamicResource ItemBackgroundColor}" x:Key="ItemBackgroundBrush" />
-    <SolidColorBrush Color="{DynamicResource AlternativeItemBackgroundColor}"
-                     x:Key="AlternativeItemBackgroundBrush" />
+    <SolidColorBrush Color="{DynamicResource AlternativeItemBackgroundColor}" x:Key="AlternativeItemBackgroundBrush" />
     <SolidColorBrush Color="{DynamicResource SelectedItemBackgroundColor}" x:Key="SelectedItemBackgroundBrush" />
     <SolidColorBrush Color="{DynamicResource MarkedItemBackgroundColor}" x:Key="MarkedItemBackgroundBrush" />
-    <SolidColorBrush Color="{DynamicResource MarkedSelectedItemBackgroundColor}"
-                     x:Key="MarkedSelectedItemBackgroundBrush" />
-    <SolidColorBrush Color="{DynamicResource MarkedAlternativeItemBackgroundColor}"
-                     x:Key="MarkedAlternativeItemBackgroundBrush" />
+    <SolidColorBrush Color="{DynamicResource MarkedSelectedItemBackgroundColor}" x:Key="MarkedSelectedItemBackgroundBrush" />
+    <SolidColorBrush Color="{DynamicResource MarkedAlternativeItemBackgroundColor}" x:Key="MarkedAlternativeItemBackgroundBrush" />
 
     <SolidColorBrush Color="{DynamicResource ForegroundColor}" x:Key="ForegroundBrush" />
     <SolidColorBrush Color="{DynamicResource AccentColor}" x:Key="AccentBrush" />
     <SolidColorBrush Color="{DynamicResource AccentComplementColor}" x:Key="AccentComplementBrush" />
     <SolidColorBrush Color="{DynamicResource LightForegroundColor}" x:Key="LightForegroundBrush" />
-    <SolidColorBrush Color="{DynamicResource AlternativeItemForegroundColor}"
-                     x:Key="AlternativeItemForegroundBrush" />
+    <SolidColorBrush Color="{DynamicResource AlternativeItemForegroundColor}" x:Key="AlternativeItemForegroundBrush" />
     <SolidColorBrush Color="{DynamicResource SelectedItemForegroundColor}" x:Key="SelectedItemForegroundBrush" />
     <SolidColorBrush Color="{DynamicResource MarkedItemForegroundColor}" x:Key="MarkedItemForegroundBrush" />
-    <SolidColorBrush Color="{DynamicResource MarkedAlternativeItemForegroundColor}"
-                     x:Key="MarkedAlternativeItemForegroundBrush" />
-    <SolidColorBrush Color="{DynamicResource MarkedSelectedItemForegroundColor}"
-                     x:Key="MarkedSelectedItemForegroundBrush" />
+    <SolidColorBrush Color="{DynamicResource MarkedAlternativeItemForegroundColor}" x:Key="MarkedAlternativeItemForegroundBrush" />
+    <SolidColorBrush Color="{DynamicResource MarkedSelectedItemForegroundColor}" x:Key="MarkedSelectedItemForegroundBrush" />
 
     <SolidColorBrush Color="{DynamicResource ErrorColor}" x:Key="ErrorBrush" />
 
 
-    <SolidColorBrush Color="{DynamicResource SelectedItemBackgroundColor}"
-                     x:Key="SystemControlHighlightListAccentLowBrush" />
+    <SolidColorBrush Color="{DynamicResource SelectedItemBackgroundColor}" x:Key="SystemControlHighlightListAccentLowBrush" />
 </ResourceDictionary>
