--- a/src/GuiApp/Avalonia/FileTime.GuiApp.App/Resources/SolarizedDarkTheme.axaml
+++ b/src/GuiApp/Avalonia/FileTime.GuiApp.App/Resources/SolarizedDarkTheme.axaml
@@ -1,7 +1,7 @@
-<ResourceDictionary xmlns="https://github.com/avaloniaui"
-                    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml">
+<ResourceDictionary xmlns="https://github.com/avaloniaui" xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml">
 
     <Color x:Key="AppBackgroundColor">#E7073642</Color>
+    <Color x:Key="AppLoadingBackgroundColor">#80073642</Color>
     <Color x:Key="ContainerBackgroundColor">#083e4c</Color>
     <Color x:Key="TransparentContainerBackgroundColor">#D0083e4c</Color>
     <Color x:Key="BarelyTransparentBackgroundColor">#80083e4c</Color>
