--- a/src/GuiApp/Avalonia/FileTime.GuiApp.App/Views/MainWindow.axaml
+++ b/src/GuiApp/Avalonia/FileTime.GuiApp.App/Views/MainWindow.axaml
@@ -11,7 +11,7 @@
     Opened="OnWindowOpened"
     RequestedThemeVariant="Dark"
     Title="FileTime"
-    TransparencyLevelHint="Blur"
+    TransparencyLevelHint="{Binding TransparencyLevelHint}"
     d:DataContext="vm:MainWindowDesignViewModel"
     d:DesignHeight="450"
     d:DesignWidth="800"
@@ -21,6 +21,7 @@
     x:DataType="vm:IMainWindowViewModelBase"
     xmlns="https://github.com/avaloniaui"
     xmlns:appCoreModels="using:FileTime.App.Core.Models"
+    xmlns:converters="clr-namespace:FileTime.GuiApp.App.Converters"
     xmlns:corevm="using:FileTime.App.Core.ViewModels"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:i="clr-namespace:Avalonia.Xaml.Interactivity;assembly=Avalonia.Xaml.Interactivity"
@@ -47,8 +48,11 @@
         <StyleInclude Source="avares://FileTime.GuiApp.App/Resources/Styles.axaml" />
     </Window.Styles>
 
-    <Grid Background="{DynamicResource AppBackgroundBrush}">
-        <Grid IsVisible="{Binding Loading, Converter={x:Static BoolConverters.Not}, FallbackValue=False}" x:DataType="vm:IMainWindowViewModel">
+    <Grid>
+        <Grid
+            Background="{DynamicResource AppBackgroundBrush}"
+            IsVisible="{Binding Loading, Converter={x:Static BoolConverters.Not}, FallbackValue=False}"
+            x:DataType="vm:IMainWindowViewModel">
 
             <Grid ColumnDefinitions="250,*" RowDefinitions="Auto,*">
 
@@ -925,7 +929,7 @@
             </Border>
         </Grid>
 
-        <Grid IsVisible="{Binding Loading}">
+        <Grid Background="{DynamicResource AppLoadingBackgroundBrush}" IsVisible="{Binding Loading}">
             <StackPanel HorizontalAlignment="Center" VerticalAlignment="Center">
                 <Image
                     Height="128"
